<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamToy For Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="todo">任务</string>
    <string name="team_news">动态</string>
    <string name="notification">通知</string>
    <string name="team_members">成员</string>
    <string name="test_content">测试内容</string>
    <string name="settings">设置</string>
    <string name="update">更新</string>
    <string name="logout">退出</string>
    

</resources>
